# bridgecard-status-page

./: .gitignore  LICENSE  Makefile  README.md  backend.dockerfile  docker-compose.yml  frontend.dockerfile  monitor.dockerfile  nginx.conf  pyproject.toml
backend/: .gitignore  pyproject.toml
backend/src/: main.py
backend/src/api/: api.py
backend/src/api/v1/: routes.py
backend/src/api/v1/endpoints/: __init__.py  admin.py  apis.py  downtime.py  issuing.py  resource.py  resource_status.py  urls.py
backend/src/core/: config.py  container.py  setup.py
backend/src/database/: db.py
backend/src/model/: admin.py  api.py  downtime.py  issuing.py  resource.py  resource_status.py
backend/src/repository/: __init__.py  admin_repository.py  apis_repository.py  base_repository.py  downtime_repository.py  resource_repository.py  resource_status_repository.py  urls_repository.py
backend/src/schema/: __init__.py  admin.py  api_schema.py
backend/src/service/: api_helper.py
backend/src/usecase/: __init__.py  admin_usecase.py  apis_usecase.py  downtime_usecase.py  issuing_usecase.py  resource_status_usecase.py  resource_usecase.py  urls_usecase.py
backend/src/utils/: auth.py  constants.py
database/mongo/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--1706972983001248741.wt  collection-0--2040462628153731917.wt  collection-0--2719838862966264843.wt  collection-0--2972254064328244313.wt  collection-0--4068883035366656628.wt  collection-0-1134404229938282356.wt  (+55 more)
frontend/: next.config.mjs  package.json
monitor/: .env  go.mod
src/: main.py
(+94 files in other folders)
